# q3

./: Cargo.toml  query.toml
src/: config.rs  error.rs  expand.rs  main.rs  script.rs  store.rs
src/cli/: mod.rs
src/components/: generator.rs  list.rs  mod.rs  query.rs
src/parser/: ast.rs  mod.rs
src/tui/: footer.rs  message.rs  meta.rs  mod.rs  preview.rs
