[package]
name = "q3"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
nom = "7.1.3"
serde = { version = "1.0.197", features = ["derive"] }
tabled = "0.15.0"
thiserror = "1.0.58"
toml = "0.8.12"


[dependencies.pyo3]
version = "0.21.1"
features = ["auto-initialize"]
