[package]
name = "q3"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
arboard = { version = "3.3.2", features = ["wl-clipboard-rs", "wayland-data-control"] }
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.27.0"
indexmap = { version = "2.2.6", features = ["serde"] }
nom = "7.1.3"
ratatui = "0.26.2"
serde = { version = "1.0.197", features = ["derive"] }
tabled = "0.15.0"
thiserror = "1.0.58"
toml = "0.8.12"
unicode-width = "0.1.11"


[dependencies.pyo3]
version = "0.21.1"
features = ["auto-initialize"]
